<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/bg"
        tools:context=".makanan.MenuMakanan"
        android:id="@+id/mainContainer">

        <ImageView
            android:id="@+id/view_shape"
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:src="@drawable/shape_kotak"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">


        </ImageView>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            app:layout_constraintStart_toEndOf="@id/view_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_shape"
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/FoodRecyclerView"
                android:layout_below="@+id/view_shape"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                tools:listitem="@layout/adapter_recycler_view">
            </androidx.recyclerview.widget.RecyclerView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="Menu"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="@+id/view_shape"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/view_shape"
            app:layout_constraintTop_toTopOf="@+id/view_shape" />

        <ImageView
            android:id="@+id/back_button_menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnA_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="450dp"
            app:srcCompat="@drawable/ic_baseline_add_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_shape">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>