...
                app:startIconTint="@color/colorBlack"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorBlack"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"

                    />

...
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorBlack"
                android:layout_marginTop="20dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

...
                    android:background="#0000"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlack"
...
